@@ -3,6 +3,6 @@ class Developer < ActiveRecord::Base
 
   protected
     def validate
-      errors.add_on_boundry_breaking("name", 3..20)
+      errors.add_on_boundary_breaking("name", 3..20)
     end
 end
